dnl Process this file with autoconf to produce a configure script.
AC_PREREQ(2.12)
AC_INIT(qvmm/qvmm.h)
AC_CONFIG_HEADER(include/config.h)
VERSION=0.0.2
PACKAGE=coldstore
AC_SUBST(VERSION)
AC_SUBST(PACKAGE)


dnl Checks for programs.
AC_PROG_AWK
AC_PROG_YACC
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AM_PROG_LEX
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

dnl Checks for libraries.
dnl Replace `main' with a function in -lc:
AC_CHECK_LIB(c, main)
AC_CHECK_LIB(dl, dlopen)
AC_CHECK_LIB(elf, elf_begin)
AC_CHECK_LIB(gmp, mpz_init_set_si)
AC_CHECK_LIB(intl, main)
AC_CHECK_LIB([iberty], [main])
AC_CHECK_LIB(n, main)
AC_CHECK_LIB(pcre, pcre_info)

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([arpa/inet.h errno.h fcntl.h libintl.h limits.h netdb.h netinet/in.h nl_types.h nlist.h stddef.h stdint.h stdlib.h string.h sys/ioctl.h sys/param.h sys/socket.h sys/time.h termios.h unistd.h values.h])

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_HEADER_TIME

dnl Checks for library functions.
AC_FUNC_ALLOCA
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MEMCMP
AC_FUNC_MMAP
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(getcwd select socket strerror strtol)

AC_PROG_MAKE_SET

missing_dir=`cd $ac_aux_dir && pwd`
AM_MISSING_PROG(ACLOCAL, aclocal, $missing_dir)
AM_MISSING_PROG(AUTOCONF, autoconf, $missing_dir)
AM_MISSING_PROG(AUTOMAKE, automake, $missing_dir)
AM_MISSING_PROG(AUTOHEADER, autoheader, $missing_dir)
AM_MISSING_PROG(MAKEINFO, makeinfo, $missing_dir)

AC_DEFUN([AC_SUBST_DIR], [
        $1=`(
            test "x$prefix" = xNONE && prefix="$ac_default_prefix"
            test "x$exec_prefix" = xNONE && exec_prefix="${prefix}"
            eval echo \""[$]$1"\"
        )`
        AC_SUBST($1)
])

coldlibdir=$libdir
AC_SUBST_DIR(coldlibdir)

AC_DEFINE_UNQUOTED(COLD_SO_DIR, "${coldlibdir}" )


AC_OUTPUT( coldstore/Makefile
	   libs/Makefile
	   include/Makefile
	   metaclass/Makefile
	   chaos/Makefile
	   intern/Makefile
 	   Makefile
	   include/Makefile
	   qvmm/Makefile
	   languages/chatter/Makefile
	   languages/freon/Makefile
	   experimental/mud/Makefile
         )

